--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
